# earthmind-near-client

./: .gitignore  Cargo.toml  Dockerfile  LICENSE-MIT  README.md  docker-compose.yml
src/: block_streamer.rs  cli.rs  constants.rs  database.rs  main.rs  models.rs
src/clients/: client.rs  mod.rs  open_ai_client.rs
src/processors/: aggregator.rs  transaction_processor.rs  validator.rs
tests/: test_contract.rs
