[package]
name = "earthmind_client_near"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[dependencies]
near-sdk = "5.2.1"
tokio = { version = "1.39.1", features = ["full"] }
serde_json = "1.0.120"
near-jsonrpc-client = "0.10.1"
near-primitives = ">0.22,<0.24"
rocksdb = "0.22.0"
clap = { version = "4.5.11", features = ["derive"] }
near-crypto = "0.23.0"
serde = "1.0.204"
near-jsonrpc-primitives = "0.23.0"
async-trait = "0.1.81"
hex = { version = "0.4", default-features = false }

[dev-dependencies]
near-sdk = { version = "5.2.1", features = ["unit-testing"] }
near-workspaces = { version = "0.10.0", features = ["unstable"] }
anyhow = "1.0"


[[bin]]
name = "earthmind_client_near"
path = "src/main.rs"
